# SecurityAgent

./: .env.template  README.md  main.py  pyproject.toml  test.py
.github/workflows/: build-agent.yaml
WIP/: github_issue_writer_agent.py  simple_requirement_agent.py
src/agents/: agent_manager.py  dependency_analyst.py  dependency_search_tool.py  fetch_dependencies_tool.py  main.py  server.py  server_test.py  session_manager.py  utils.py
src/agents/old/: server.py  server_test.py  session_manager.py
src/agentstack_agents/: agent.py  dependency_search_tool.py  fetch_dependencies_tool.py  session_manager.py  utils.py
