[project]
name = "VulnerabiltyAgent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    {name = "Sandi Besen", email = "sandi.besen@ibm.com"},
    {name = "Kenneth Ocheltree", email = "kochel@us.ibm.com"}
]
requires-python = ">=3.13"
dependencies = [
    "agentstack-sdk>=0.4.0",
    "beeai-framework>=0.1.59",
    "openinference-instrumentation-beeai>=0.1.13",
    "pyyaml>=6.0.3",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[project.scripts]
server = "agentstack_agents.agent:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "watchfiles>=1.1.0",
]